[Modify] Change output style and file name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -453,6 +453,7 @@ set (GLOG_PUBLIC_H
   ${CMAKE_CURRENT_BINARY_DIR}/glog/stl_logging.h
   ${CMAKE_CURRENT_BINARY_DIR}/glog/vlog_is_on.h
   src/glog/log_severity.h
+  src/glog/logger.h
 )
 
 set (GLOG_SRCS
@@ -469,6 +470,7 @@ set (GLOG_SRCS
   src/utilities.cc
   src/utilities.h
   src/vlog_is_on.cc
+  src/logger.cc
 )
 
 if (HAVE_PTHREAD OR WIN32)
